# Stateless_Spring_Anguler

./: .gitignore  package-lock.json  pyproject.toml
ReadMe/: OauthSecurityFlows.md
backend/: .flattened-pom.xml  pom.xml
backend/Spring-Data-Core/: .flattened-pom.xml  pom.xml
backend/Spring-Security-Authorization-Code-Resource-Server/: .flattened-pom.xml  pom.xml
backend/Spring-Security-Authorization-Code-Resource-Server/ReadMe/: SecuritySetup.md
backend/readMe/: project_structure.md
backend/src/main/resources/: application.yml
frontend/: .npmrc  angular.json  package-lock.json  package.json
frontend-lib/ReadMe/: 0000Commands.md  0001InstallPrimeNg.md  0002ReferenceOtherComponentFromOtherSecondaryEntry.md  CICD-Deployment.md  CreateBarrelFileStructure.md  CreateItemsForLib.md  CreateLibApp.md  CreateSecondaryLibs.md
frontend-lib/mqml-workspace/: .gitignore  README.md  angular.json  package-lock.json  package.json  tsconfig.json
frontend/readMe/: project_structure.md
frontend/src/: silent-refresh.html  styles.scss
frontend/src/app/: app.config.ts  app.routes.ts  app.ts
frontend/src/assets/app/: _breadcrumb.scss  _topbar.scss  cad.scss  (+1 more)
readMe/: poetry.md  pytest_conftest.md  pytest_fixture_scope.md  pytest_setup_show.md  pytest_test_method.md
src/cards/: cli.py
src/test/: pytest.ini  test_alt_fail.py  test_card.py  test_classes.py  test_exceptions.py  test_structure.py
src/test/buildin-fixtures/: test_capsys.py  test_monkeypath.py  test_tmp_path.py
src/test/fixtures/: conftest.py  test_count.py  test_count_initial.py  test_fixtures.py
(+320 files in other folders)
