[project]
name = "cards"
version = "0.1.0"
description = "learning pytest"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "tinydb (>=4.8.2,<5.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "rich (>=14.0.0,<15.0.0)",
    "faker (>=37.3.0,<38.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pre-commit = "^4.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
faker = "^37.3.0"
tox = "^4.26.0"
coverage = "^7.8.2"
pytest-cov = "^6.1.1"


[project.scripts]
cards = "cards:app"

